# langchain-course-doc-assistant

./: ingestion.py  ingestion_map_extract.py  main.py  pyproject.toml
backend/: core.py
